--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,347 @@
 
+body {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+header {
+  background-color: yellow;
+  padding: 5px 20px 0 5px;
+}
+
+header h1 {
+  display: inline-block;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 72px;
+  font-weight: 200;
+  margin: 5px 20px;
+}
+
+header h1 a {
+  color: inherit;
+}
+
+header h1 a:hover {
+  text-decoration: none;
+}
+
+nav {
+  background-color: #333;
+  color: white;
+  margin: 0 -20px;  /* negative margin here makes up for header padding */
+  font-size: 28px;
+  font-weight: 200;
+}
+
+.navbar-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0 20px;
+}
+
+.navbar-item {
+  display: inline;
+}
+
+.navbar-item a {
+  display: inline-block;
+  padding: 10px 20px;
+  color: white;
+}
+
+.navbar-item:hover a {
+  background-color: #444;
+}
+
+.navbar-menu {
+  position: relative;
+}
+
+.navbar-menu-list {
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: none;
+  padding: 0;
+  list-style-type: none;
+  z-index: 10;
+  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.25);
+}
+
+.navbar-menu-list,
+.navbar-menu-list li {
+  background-color: #444;
+}
+
+.navbar-menu:hover .navbar-menu-list {
+  display: initial;
+}
+
+.navbar-menu-list li:hover,
+.navbar-menu-list li:hover a {
+  background-color: #565656;
+}
+
+.navbar-right {
+  float: right;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px 20px 100px 20px;
+  min-height: 300px;
+}
+
+.todo {
+  background-color: #fffe6e;
+  position: relative;
+  width: 300px;
+  min-height: 300px;
+  margin: 20px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 24px;
+  font-weight: 200;
+  word-wrap: break-word;
+}
+
+.todo h2 {
+  margin: 20px;
+  text-align: center;
+}
+
+.todo-body {
+  padding: 0 20px
+}
+
+.todo-list {
+  list-style-type: circle;
+}
+
+.todo p {
+  margin: 15px 0;
+}
+
+.todo p.indent-wrapped {
+  padding-left: 50px;
+  text-indent: -50px;
+}
+
+.todo .when,
+.todo .where,
+.todo .who {
+  font-weight: bold;
+}
+
+.todo .dismiss-button {
+  font-family: sans-serif;
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 30px;
+  display: none;
+  cursor: pointer;
+}
+
+.todo:hover .dismiss-button {
+  display: initial;
+}
+
+.add-note-button-container {
+  position: fixed;
+  bottom: 35px;
+  right: 35px;
+  z-index: 10;
+}
+
+#add-note-button {
+  width: 64px;
+  height: 64px;
+  background-color: red;
+  border: none;
+  border-radius: 32px;
+  box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 40px;
+  font-weight: 200;
+  padding: 0 0 8px 0;
+  cursor: pointer;
+  outline: none;
+}
+
+#add-note-button:hover {
+  box-shadow: 2px 6px 12px rgba(0, 0, 0, 0.33);
+}
+
+footer {
+  background-color: #333;
+  color: white;
+}
+
+footer .copyright {
+  height: 30px;
+  line-height: 30px;
+  text-align: right;
+  padding-right: 25px;
+  font-weight: 200;
+}
+
+#modal-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+#add-note-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1010;
+  overflow: scroll;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal-dialog {
+  width: auto;
+  max-width: 600px;
+  min-width: 350px;
+  min-height: 300px;
+  margin: 40px auto;
+  background-color: #fff;
+  border-radius: 15px;
+}
+
+.modal-header {
+  position: relative;
+  padding: 10px 20px;
+}
+
+.modal-header h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+.modal-close-button {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 24px;
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.todo-input-element {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: 10px 0;
+}
+
+.todo-input-element label {
+  font-weight: 600;
+  flex: 1 75px;
+  margin-right: 10px;
+}
+
+.todo-input-element input,
+.todo-input-element textarea {
+  flex: 6 200px;
+  padding: 8px;
+  font-size: 20px;
+  border: 1px solid #aaa;
+}
+
+.todo-input-element textarea {
+  min-height: 64px;
+}
+
+.todo-input-element.required label::after {
+  content: ' *';
+  color: red;
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 10px 20px 10px;
+}
+
+.modal-footer button {
+  font-size: 20px;
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #333;
+  border-radius: 5px;
+  padding: 10px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.modal-footer .modal-cancel-button:hover {
+  background-color: #eee;
+}
+
+.modal-footer .modal-accept-button {
+  background-color: #2464f5;
+  color: #fff;
+}
+
+.modal-footer .modal-accept-button:hover {
+  background-color: #5481e4;
+}
+
+.info-container {
+  flex: 1 100%;
+  text-align: center;
+}
+
+.info-container h2,
+.info-container h3 {
+  margin: 0;
+  font-weight: lighter;
+}
+
+.info-container h2 {
+  font-size: 80px;
+}
+
+.info-container h3 {
+  font-size: 32px;
+}
+
+.homepage-icon {
+  font-size: 175px;
+  line-height: 175px;
+  color: #333;
+}
+
+.user-select-container {
+  margin-top: 30px;
+}
+
+#user-select {
+  min-width: 300px;
+  height: 40px;
+  border: 1px solid #333;
+  background-color: #fff;
+  font-size: 20px;
+}
